chore(docs): update documentation and packaging for version 1.0.1
- Refactor README.md to English-only content without emojis
- Improve documentation structure, clarity, and presentation
- Enhance configuration, setup, and troubleshooting sections
- Add MANIFEST.in file to include all necessary files for PyPI
- Standardize version to 1.0.1 in pyproject.toml, __init__.py, server.py, and README
- Fix package build configuration and inclusion rules for publishing
- Exclude development and test files from package distribution

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "google-colab-mcp"
-version = "1.0.0"
+version = "1.0.1"
 authors = [
-    {name = "inkbytefo", email = "contact@inkbytefo.dev"},
+    {name = "inkbytefo", email = "inkbytefo@gmail.com"},
 ]
 description = "Model Context Protocol server for seamless Google Colab integration with AI assistants"
 readme = "README.md"
