--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,14 +1,25 @@
+# MANIFEST.in - Specify additional files to include in the package
 include README.md
 include LICENSE
+include CHANGELOG.md
+include CONTRIBUTING.md
 include requirements.txt
 include pyproject.toml
+
+# Include all template files
 recursive-include src/mcp_colab_server/templates *.json
-recursive-include src/mcp_colab_server/config *.json
-exclude tests/*
-exclude .git*
-exclude .kiro*
-exclude *.pyc
-exclude __pycache__
-exclude build/*
-exclude dist/*
-exclude *.egg-info/*
+
+# Include documentation
+recursive-include docs *.md
+
+# Include example files  
+recursive-include examples *.py *.json
+
+# Exclude development and test files
+global-exclude __pycache__
+global-exclude *.py[co]
+global-exclude .git*
+global-exclude .DS_Store
+global-exclude *.so
+global-exclude *.dylib
+prune tests
